--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang="eng">
-    <head>
-        <meta charset="UTF-8">
-        <title>Etch-A-Sketch</title>
-        <link rel="stylesheet" href="styles.css">
-    </head>
-    <body>
-        <script src="script.js" defer></script>
-        <div class="container"></div>
-    </body>
+<head>
+    <meta charset="UTF-8">
+    <title>Etch-A-Sketch</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <div class="container"></div>
+    <button id="changeGridSize">Change grid size</button>
+    <script src="script.js" defer></script>
+</body>
 </html>
